--- a/ServerYourWorldMMORPG.csproj
+++ b/ServerYourWorldMMORPG.csproj
@@ -32,6 +32,7 @@
 
   <ItemGroup>
     <Folder Include="Migrations\" />
+    <Folder Include="Models\Game\World\Territoriy\" />
   </ItemGroup>
 
   <ItemGroup>
