Updated .gitignore and added example of appsetiings.json renames update
+ Adjustment of the DbContext and added into DI

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
 
   "DatabaseSettings": {
-    "ConnectionString": "server=;database=yourworld;user=root;password="
+    "ConnectionString": "server=192.168.4.253;database=yourworld;user=root;password=Blaze23104289"
   }
 }
