--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
 
   "DatabaseSettings": {
-    "ConnectionString": "server=192.168.4.253;database=yourworld;user=root;password=Blaze23104289"
+    "ConnectionString": "server=;database=yourworld;user=root;password="
   }
 }
