Project major structure change deleted unused files simplified logic
+ Deleted many old logic files
+ Made a simplified GameServer and LoginServer version and prepared for scenarios to connect with the database
+ Transferred migration into Database folder experimental not tested
+ DependecyInjection added the DbContext there
+ Created new services for the authentication and world managment
+ Updated appsettings.json.exmple

--- a/appsettings.json.example
+++ b/appsettings.json.example
@@ -1,16 +1,15 @@
 {
-  "ServerSettings": {
+  "LoginServerSettings": {
     "IpAddress": "127.0.0.1",
-    "TcpPort": 8888,
-    "UdpPort": 8888,
+    "Port": 8888
+  },
+  "GameServerSettings": {
+    "Name": "<ServerName>",
+    "IpAddress": "127.0.0.1",
+    "Port": 7777,
     "MaxPlayers": 100
   },
-
   "DatabaseSettings": {
-<<<<<<< main:appsettings.json
-    "ConnectionString": "server=;database=yourworld;user=root;password="
-=======
-    "ConnectionString": "server=SERVERIP;database=DATABASE;user=DATABASEUSER;password=DATABASEPASSWORD"
->>>>>>> Updated .gitignore and added example of appsetiings.json renames update:appsettings.json.example
+    "ConnectionString": "server=<IPAddress>;database=<Database>;user=<User>;password=<Password>"
   }
 }
